--- a/style.css
+++ b/style.css
@@ -33,7 +33,6 @@
   .scoreboard-letter{
     width: 50px;
     height: 50px;
-    grid-column: 1fr;
     font-size: 30px;
     text-transform: uppercase;
     border: 3px solid #ccc;
@@ -46,3 +45,25 @@
   .spiral{
     font-size: 30px;
   }
+
+  .correct{
+    background-color: #006300;
+  }
+  .close{
+    background-color: #DAA520;
+  }
+  .wrong{
+    background-color: #888888;
+  }
+  .inavlid{
+    animation: flash 1s;
+  }
+
+    @keyframes flash {
+        5% {
+        border: 3px solid crimson;
+        }
+        100% {
+        border: 3px solid #ccc;
+        }
+    }
