fix loading status

--- a/style.css
+++ b/style.css
@@ -77,6 +77,6 @@
         transform: rotate(360deg); 
         } 
     }
-    .hidden{
-        visibility:visible;
+    .shpw{
+        visibility: visible ;
     }
