--- a/style.css
+++ b/style.css
@@ -21,6 +21,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    visibility: hidden;
 
   }
 
@@ -55,7 +56,7 @@
   .wrong{
     background-color: #888888;
   }
-  .inavlid{
+  .invalid{
     animation: flash 1s;
   }
 
@@ -77,6 +78,6 @@
         transform: rotate(360deg); 
         } 
     }
-    .shpw{
+    .show{
         visibility: visible ;
     }
