--- a/style.css
+++ b/style.css
@@ -130,3 +130,19 @@
   .winner {
     animation: rainbow 4s infinite linear;
   }
+
+  @keyframes flip {
+    0% {
+      transform: scaleY(1);
+    }
+    50% {
+      transform:  scaleY(0);
+    }
+    100% {
+      transform: scaleY(1);
+    }
+  }
+  
+  .flipping {
+    animation: flip 1s ease-in-out;
+  }
