--- a/style.css
+++ b/style.css
@@ -147,5 +147,21 @@
   }
   
   .flipping {
-    animation: flip 0.7s ease-in-out;
+    animation: flip 0.6s ease-in-out;
+  }
+
+  @keyframes bounce {
+    0% {
+      transform: scale(1);
+    }
+    50% {
+      transform: scale(1.1);
+    }
+    100% {
+      transform: scale(1);
+    }
+  }
+  
+  .bouncing {
+    animation: bounce 0.3s;
   }
